k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-app-backend
  
  labels:
    app: notes-app-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notes-app-backend
  template:
    metadata:
      labels:
        app: notes-app-backend
    spec:
      containers:
      - name: backend
        image: notes-app-backend:v5
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /api/notes
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/notes
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
        - name: notes-data
          mountPath: /app/data
      volumes:
      - name: notes-data
        emptyDir: {}
