k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-app-frontend
  
  labels:
    app: notes-app-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notes-app-frontend
  template:
    metadata:
      labels:
        app: notes-app-frontend
    spec:
      containers:
      - name: frontend
        image: notes-app-frontend:v3
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "32Mi"
            cpu: "25m"
          limits:
            memory: "64Mi"
            cpu: "50m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
