k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-app-frontend-service
  
  labels:
    app: notes-app-frontend
spec:
  selector:
    app: notes-app-frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 30090
  type: NodePort
